--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@learn-co-curriculum/jest-learn-reporter": "^0.1.0",
     "@eslint/js": "^9.9.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
+    "@learn-co-curriculum/jest-learn-reporter": "^0.1.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -36,9 +36,10 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "jsdom": "^27.4.0",
     "json-server": "^1.0.0-beta.2",
     "vite": "^5.4.1",
-    "vitest": "^2.0.5",
+    "vitest": "^2.1.9",
     "whatwg-fetch": "^3.6.2"
   }
 }
